Add deploy prep

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,28 @@
+Authlib==0.15.5
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.11
 click==8.0.3
+cryptography==36.0.1
+dataclasses-json==0.5.6
 Flask==2.0.2
+gunicorn==20.1.0
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+marshmallow==3.14.1
+marshmallow-enum==1.5.1
+mypy-extensions==0.4.3
+pycparser==2.21
+pyenchant==3.2.2
 python-dotenv==0.19.2
+python-twitter-v2==0.7.3
+pytwitter==0.5
 PyYAML==6.0
 requests==2.27.1
 tweet-parser==1.13.2
+typing-inspect==0.7.1
+typing_extensions==4.0.1
 urllib3==1.26.8
 Werkzeug==2.0.2
