--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs==21.4.0
 Authlib==0.15.5
 certifi==2021.10.8
 cffi==1.15.0
@@ -8,19 +9,26 @@ dataclasses-json==0.5.6
 Flask==2.0.2
 gunicorn==20.1.0
 idna==3.3
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 marshmallow==3.14.1
 marshmallow-enum==1.5.1
 mypy-extensions==0.4.3
+packaging==21.3
+pluggy==1.0.0
+py==1.11.0
 pycparser==2.21
 pyenchant==3.2.2
+pyparsing==3.0.7
+pytest==6.2.5
 python-dotenv==0.19.2
 python-twitter-v2==0.7.3
 pytwitter==0.5
 PyYAML==6.0
 requests==2.27.1
+toml==0.10.2
 tweet-parser==1.13.2
 typing-inspect==0.7.1
 typing_extensions==4.0.1
