--- a/Code/requirements.txt
+++ b/Code/requirements.txt
@@ -16,6 +16,7 @@ MarkupSafe==2.0.1
 marshmallow==3.14.1
 marshmallow-enum==1.5.1
 mypy-extensions==0.4.3
+oauthlib==3.2.0
 packaging==21.3
 pluggy==1.0.0
 py==1.11.0
@@ -28,6 +29,7 @@ python-twitter-v2==0.7.3
 pytwitter==0.5
 PyYAML==6.0
 requests==2.27.1
+requests-oauthlib==1.3.1
 toml==0.10.2
 tweet-parser==1.13.2
 typing-inspect==0.7.1
